<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Registermaschine CLI</name>
    <version>1.1.1</version>
    <groupId>dk.tij.registermaschine</groupId>
    <artifactId>console</artifactId>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <registermaschine-core.version>1.0.1</registermaschine-core.version>
    </properties>

    <repositories>
        <repository>
            <id>github-jissuesystem</id>
            <url>https://maven.pkg.github.com/TiJ-code/JIssueSystem</url>
        </repository>
        <repository>
            <id>github-registermaschine</id>
            <url>https://maven.pkg.github.com/TiJ-code/Registermaschine</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>dk.tij.registermaschine</groupId>
            <artifactId>core</artifactId>
            <version>${registermaschine-core.version}</version>
        </dependency>
        <dependency>
            <groupId>dk.tij.registermaschine</groupId>
            <artifactId>api</artifactId>
            <version>${registermaschine-core.version}</version>
        </dependency>
        <dependency>
            <groupId>dk.tij.registermaschine</groupId>
            <artifactId>instructions</artifactId>
            <version>${registermaschine-core.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.11.0</version>
        </dependency>
        <dependency>
            <groupId>dk.tij</groupId>
            <artifactId>jissuesystem</artifactId>
            <version>0.2.0</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>dk.tij.registermaschine.core/dk.tij.registermaschine.core.compilation.internal.compiling=cli</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>dk.tij.registermaschine.console.ConsoleApplication</mainClass>
                                    <manifestEntries>
                                        <Add-Exports>dk.tij.registermaschine.core/dk.tij.registermaschine.core.compilation.internal.compiling=dk.tij.registermaschine.console</Add-Exports>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>